--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,7 @@
   "outputDirectory": "dist",
   "framework": "vite",
   "env": {
-    "VITE_BACKEND_URL": "http://localhost:4000"
+    "VITE_BACKEND_URL": "https://forever-main-2.onrender.com"
   },
   "rewrites": [
     {
